# Monad-tucas-Orderbook-dec

./: .deployed-addresses  ADVANCED_USER_GUIDE.md  CODEBASE_EXPLANATION.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PLAN.md  DEX_README.md  Dockerfile  FINAL_DEPLOYMENT_READY.md  FRONTEND_INTEGRATION.md  NEXT_STEPS_GUIDE.md  PROJECT_SUMMARY.md  QUICK_DEPLOY.md  README.md  REMOVE_TRADING_PAIR_MANAGER.md  TRADING_PAIR_IMPLEMENTATION_SUMMARY.md  TRADING_PAIR_MANAGEMENT.md  add-trading-pair.sh  analyze-current-state.sh  create-test-tokens-manual.sh  deployment.txt  env.example  foundry.toml  setup-frontend-env.sh  setup-vercel-env.sh  test-complete-dex.sh  test-complete-system.sh  test-frontend-complete.sh  test-frontend-fixes.sh  test-trading-pairs.sh  update-frontend-pairs.sh  update-frontend-real-tokens.sh
MainFrontend/frontend/: env.example  index.html  package-lock.json  package.json  tailwind.config.ts
MainFrontend/frontend/src/: App.tsx  index.css
MainFrontend/frontend/src/components/: ConnectWallet.tsx  ContractStatus.tsx  FloatingOrbs.tsx  LimitOrderCard.tsx  (+6 more)
contracts/: MonadToken.sol  OrderBookDEX.sol
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/config/: network.ts
frontend/src/lib/: utils.ts
frontend/src/services/: dex-service.ts
frontend/src/store/: dex-store.ts
script/: Deploy.s.sol
scripts/: deploy-backend.sh  deploy-dex.sh  deploy-fresh.sh  deploy-limit-orders.sh  deploy-simplified.sh  deploy.sh
(+21 files in other folders)
