[package]
name = "monad-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies for Monad/EVM compatibility
ethers = { version = "2.0", features = ["legacy"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# For smart contract compilation and deployment
foundry-rs = "0.2"
forge-std = "1.7"

# For configuration and environment management
dotenv = "0.15"
config = "0.13"

# For CLI interface
clap = { version = "4.0", features = ["derive"] }

# For logging
tracing = "0.1"
tracing-subscriber = "0.3"

# For async operations
futures = "0.3"

# For cryptographic operations
sha3 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "monad-deploy"
path = "src/bin/deploy.rs"

[[bin]]
name = "monad-interact"
path = "src/bin/interact.rs"

[[bin]]
name = "monad-dex"
path = "src/bin/dex.rs"
